[tool.poetry]
name = "keep-botting-and-no-one-explodes"
version = "0.1.0"
description = ""
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^7.0.0"
pyautogui = "^0.9.48"
numpy = "^1.18.1"
imutils = "^0.5.3"
python3-xlib = "^0.15"
opencv-contrib-python = "^4.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4.4"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
